# search_engineering

./: .gitignore  .gitpod.Dockerfile  Makefile  README.md  count-tracker.sh  delete-indexes.sh  download-data.sh  gitpod-command.sh  gitpod-init.sh  index-data.sh  install-packages.md  pyproject.toml  requirements.txt  snapshots-perms.sh  week-one.md
docker/: docker-compose-w1.yml  docker-compose-w2.yml  docker-compose-w3.yml  docker-compose-w4-snapshots.yml  docker-compose-w4.yml
docker-grafana/: README.md  install-plugin.sh  monitoring.yml
docker-grafana/grafana/provisioning/dashboards/: opensearch-prometheus.json
docker-grafana/prometheus/: prometheus.yml
utilities/: bbuy_products.json  bbuy_products_sharded.json  index.py
week1/: bbuy_products_no_map.json  index.py  query.py  results.md  results.txt
week1/dev_tools/: data_modeling.dev  index_settings.dev  slow_logs.dev
week2/: index.py  query.py  results.md
week2/project results/: results.txt
week2/results/: observation.txt
week3/: bbuy_products.json  index.py  query.py  result notes.txt  results.md
week4/: bbuy_products.json  index.py  query.py  results.md
week4/dev_tools/: snapshots.dev
