[tool.poetry]
name = "search-engineering-main"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "search_engineering_main"}]

[tool.poetry.dependencies]
python = "3.9.7"
opensearch-py = "^2.2.0"
requests = "^2.29.0"
ipython = "^8.13.1"
urljoin = "^1.0.0"
pandas = "^2.0.1"
fastparquet = "^2023.4.0"
click = "^8.1.3"
lxml = "^4.9.2"
kaggle = "^1.5.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
